--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <body>
 
-<h1>Chat program</h1>
-<p>My first chat</p>
+<h1>SekuChat</h1>
+<p>Testing seku.chat website</p>
 
-<p></p><a href="chat.php">chat.php</a></p>
+<p>Here is a linkt to a php page:</p>
+<p><a href="chat.php">chat.php</a></p>
 
 </body>
 </html> 
