--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <h1>SekuChat</h1>
 <p>Testing seku.chat website</p>
 
-<p>Here is a linkt to a php page, BUT PHP DOES NOT WORK HERE and we do not need it:</p>
-<p><a href="chat.php">chat.php</a></p>
+<p>This is FrontEnd, no php nor python works here.</p>
+<p>All like that in BackEnd</p>
 
 </body>
 </html> 
