--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>SekuChat</h1>
+<h1>SekuChat FrontEnd</h1>
 <p>Testing seku.chat website</p>
 
 <p>This is FrontEnd, no php nor python works here.</p>
