--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <h1>SekuChat FrontEnd</h1>
 <p>Testing seku.chat website</p>
 
+<p><a href="public/">public folder</a></p>
+  
 <p>This is FrontEnd, no php nor python works here.</p>
 <p>All like that in BackEnd</p>
 
