--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<body>
 
+<h1>SekuChat FrontEnd</h1>
+<p>Testing seku.chat website</p>
+
+<p>This is the public folder</p>
+  
+
+</body>
+</html> 
