--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+.html<!DOCTYPE html>
 <html>
 <body>
 
 <h1>SekuChat FrontEnd</h1>
 <p>Testing seku.chat website</p>
 
-<p><a href="public/">public folder</a></p>
+<p><a href="public/index.html">public folder</a></p>
   
 <p>This is FrontEnd, no php nor python works here.</p>
 <p>All like that in BackEnd</p>
