--- a/hannu/index.html
+++ b/hannu/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html>
+<body>
 
+<h1>SekuChat FrontEnd</h1>
+<p>Testing seku.chat website</p>
+
+  <p>You are in /hannu/ subfolder</p>
+  
+<p><a href="/index.html">Back to Domain Root</a></p>
+  
+<p>This is FrontEnd, no php nor python works here.</p>
+<p>All like that in BackEnd</p>
+
+</body>
+</html> 
